--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon"  href="./src/assets/zivaLogo.png" />
+    <link rel="icon"  href="./src/assets/HonorIcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ZIVA</title>
+    <title>HONOR</title>
     <script src="https://kit.fontawesome.com/0e1fa7c1a3.js" crossorigin="anonymous"></script>
   </head>
   <style>
